# convfinqa

./: .aliases  .gitignore  Dockerfile  README.md  REPORT.md  docker-compose.yaml  pyproject.toml  run_models.sh  sample.env  todo.txt
.github/workflows/: code_checks.yml
app/: config.py  data_parser.py  dummy.py  evaluator.py  fail.py  generate_responses.py  logger.py  main.py  model_loader.py  prompting.py
dummy_dir/: main.py  pyproject.toml
outputs/gpt-4.1_basic/: convfinqa_responses.json  eval.txt
outputs/gpt-4o-mini_basic/: convfinqa_responses.json  eval.txt
tests/: test_data_parser.py  test_evaluator.py  test_generate_responses.py  test_model_loader.py  test_prompting.py
