[project]
name = "convfinqa-evaluation-pipeline"
version = "0.1.0"
description = "A data analytics pipeline to assess the capability of modern LLMs to answer a multi turn conversational financial dataset"
requires-python = ">=3.9"
dependencies = [
  "typer==0.12.0",
  "click==8.1.7",
  "dotenv>=0.9.9",
  "pandas>=2.2.3",
  "ruff>=0.11.10",
  "pylit>=0.8.0",
  "ipykernel>=6.29.5",
  "tqdm>=4.67.1",
  "mypy>=1.16.1",
  "pydantic>=2.11.7",
  "openai>=1.92.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
main = "src.main:app"

[tool.ruff]
fix = false
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "F",  # default Ruff rules
    "E",  # pycodestyle Errors
    "W",  # pycodestyle Warnings
    "I",  # import sorting
    "UP", # modern syntax updates
    "B",  # flake8 common pitfalls & best practices
    "Q",  # flake8 consistent quotes
    "N",  # naming conventions,
]

ignore = [
    "B008",
    "D413",
    "E501",
    "W293",
    "W291",
    "PLR2004",
    "D101",
    "D400",

]

fixable = ["ALL"]

extend-select = [
    "PLR2004",
    "D101",
    "D102",
    "D103",
    "D201",
    "D202",
    "D215",
    "T201",
]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_globals = true
ignore_missing_imports = true
show_error_codes = true
strict = false
warn_return_any = true
packages = ["src"]
