[project]
name = "dummy-dir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]  # <--- Exclude all notebook files completely

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "I",     # Import sorting
  "UP",    # Modern Python syntax
  "B",     # Bugbear
  "SIM",   # Simplify logic
  "C4",    # Comprehension fixes
  "RUF",   # Ruff-specific
  "D101",  # Missing class docstring
  "D102",  # Missing method docstring
  "D103",  # Missing function docstring
  "ANN001",# Missing arg type
  "ANN201" # Missing return type
]

